...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9R8-hv-Coh" customClass="RoundButton" customModule="LIneChart">
                                <rect key="frame" x="314" y="64" width="80" height="45"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="80" id="ARc-6k-iyy"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="25"/>
                                <state key="normal" title="Price">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="21"/>
                                    </userDefinedRuntimeAttribute>
...
                                    <action selector="modeButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="s2C-Xh-W97"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pfU-dS-Y7N" customClass="RoundButton" customModule="LIneChart">
                                <rect key="frame" x="74" y="438" width="60" height="48"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="1M">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="21"/>
                                    </userDefinedRuntimeAttribute>
...
                                    <action selector="twoYearsIntervalChosen:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KYk-wu-C7j"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YA4-yu-VOL" customClass="RoundButton" customModule="LIneChart">
                                <rect key="frame" x="142" y="438" width="60" height="48"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="3M">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="21"/>
                                    </userDefinedRuntimeAttribute>
...
                                    <action selector="threeMonthsIntervalChosen:" destination="BYZ-38-t0r" eventType="touchUpInside" id="irh-YZ-oiE"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dSQ-Mo-Buj" customClass="RoundButton" customModule="LIneChart">
                                <rect key="frame" x="6" y="438" width="60" height="48"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="1W">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="21"/>
                                    </userDefinedRuntimeAttribute>
...
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4zX-CV-Eua" customClass="RoundButton" customModule="LIneChart">
                                <rect key="frame" x="308" y="589" width="93" height="48"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Show">
                                            <attributes>
                                                <color key="NSColor" cocoaTouchSystemColor="darkTextColor"/>
                                                <font key="NSFont" size="25" name="MarkerFelt-Wide"/>
                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                            </attributes>
                                        </fragment>
...
