...
        if isinReceived {
        priceMode = !priceMode
        if priceMode {
        modeButton.titleLabel?.text = "Price"
            modeButton.setTitle("Price", for: .normal)
        } else {
            modeButton.titleLabel?.text = "IELD"
            modeButton.setTitle("IELD", for: .normal)
        }
      }
    }
    
    @IBAction func doneButtonTapped(_ sender: Any) {
...
